--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -744,6 +744,10 @@ mat-icon {
   &.purple {
     color: var(--purple) !important;
   }
+
+  &.yellow {
+    color: var(--yellow) !important;
+  }
 }
 
 button {
