--- a/src/app/shared/components/setting-control/setting-control.component.scss
+++ b/src/app/shared/components/setting-control/setting-control.component.scss
@@ -120,6 +120,16 @@
   .setting-control {
     flex-shrink: 0;
 
+    .time-split {
+      display: flex;
+      gap: var(--space-md);
+      align-items: center;
+
+      .input-field {
+        flex: 1;
+      }
+    }
+
     .stepper {
       display: flex;
       align-items: center;
@@ -246,8 +256,6 @@
     }
   }
 }
-
-// Add these styles to your setting-control.component.scss
 
 .setting-info {
   flex: 1;
