Refactor code structure for improved readability and maintainability

--- a/src/app/features/components/dashboard/general-overview/general-overview.component.html
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.html
@@ -394,7 +394,7 @@
                     </div>
 
                     <div class="task-cron">
-                      <mat-icon svgIcon="code" class="cron-icon"></mat-icon>
+                      <mat-icon svgIcon="terminal" class="cron-icon"></mat-icon>
                       <code class="cron-expression">{{ task.cronExpression }}</code>
                     </div>
 
