--- a/src/app/features/modals/settings/security-settings/security-settings.component.html
+++ b/src/app/features/modals/settings/security-settings/security-settings.component.html
@@ -50,14 +50,16 @@
                   <mat-icon svgIcon="lock"></mat-icon>
                   Encrypt Configuration
                 </button>
-                <button
+                <a
                   mat-stroked-button
-                  (click)="learnMoreAboutEncryption()"
+                  href="https://rclone.org/docs/#configuration-encryption"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   class="action-button-large"
                 >
                   <mat-icon svgIcon="open-link"></mat-icon>
                   Learn More
-                </button>
+                </a>
               </div>
             </div>
           } @else {
